--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         ul {
             margin-left: 20px;
         }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
         .footer {
             margin-top: 30px;
             font-style: italic;
@@ -74,34 +81,13 @@
                     <th>Name</th>
                     <th>Email</th>
                 </tr>
-                <tr>
-                    <td>Christian Noel Busalanan</td>
-                    <td>lr.cnbusalanan@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>Claude Derick Gigante</td>
-                    <td>lr.cdgigante@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>Ian Federico Santiago</td>
-                    <td>lr.ifsantiago@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>James Earl Teriales</td>
-                    <td>lr.jeteriales@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>Joshua Ricohermozo</td>
-                    <td>lr.jricohermozo@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>Kimberly Guevara</td>
-                    <td>lr.kguevara@mmdc.mcl.edu.ph</td>
-                </tr>
-                <tr>
-                    <td>Ratherford Abaya</td>
-                    <td>lr.rabaya@mmdc.mcl.edu.ph</td>
-                </tr>
+                <tr><td>Christian Noel Busalanan</td><td>lr.cnbusalanan@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>Claude Derick Gigante</td><td>lr.cdgigante@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>Ian Federico Santiago</td><td>lr.ifsantiago@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>James Earl Teriales</td><td>lr.jeteriales@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>Joshua Ricohermozo</td><td>lr.jricohermozo@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>Kimberly Guevara</td><td>lr.kguevara@mmdc.mcl.edu.ph</td></tr>
+                <tr><td>Ratherford Abaya</td><td>lr.rabaya@mmdc.mcl.edu.ph</td></tr>
             </table>
 
             <h3>Project Overview</h3>
@@ -263,7 +249,11 @@
 
             <h3>How to Use</h3>
             <ul>
-                <li>Clone the repository from GitHub</li>
+                <li>Clone the repository from GitHub: 
+                    <a href="https://github.com/santiagoian01/MotorPH-PayrollSystem" target="_blank">
+                        MotorPH Payroll System Repository
+                    </a>
+                </li>
                 <li>Compile the project using any Java IDE or via command line</li>
                 <li>Launch the application and log in with valid credentials</li>
                 <li>Access respective modules: Leave, Employee Management, Payroll</li>
@@ -271,6 +261,11 @@
 
             <div class="footer">
                 <p>Thank you for visiting our documentation! For any concerns or technical support, feel free to contact any group member.</p>
+                <p>Project Repository: 
+                    <a href="https://github.com/santiagoian01/MotorPH-PayrollSystem" target="_blank">
+                        GitHub Link
+                    </a>
+                </p>
             </div>
         </div>
     </div>
